--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -108,11 +108,12 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #main_content h4 {
-  font-size: 14px;
+  font-size: 16px;
+  color: #E6DB74;
 }
 
 #main_content h5 {
-  font-size: 12px;
+  font-size: 14px;
   text-transform: uppercase;
   margin: 0 0 5px 0;
 }
@@ -122,6 +123,10 @@ h1, h2, h3, h4, h5, h6 {
   text-transform: uppercase;
   color: #999;
   margin: 0 0 5px 0;
+}
+
+strong{
+  color:#F92672;
 }
 
 dt {
