--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -38,9 +38,9 @@ li {
 header {
   background: rgba(0, 0, 0, 0.1);
   width: 100%;
-  border-bottom: 1px dashed #b5e853;
+  /*border-bottom: 1px dashed #b5e853;*/
   padding: 20px 0;
-  margin: 0 0 40px 0;
+  margin: 0 0 0px 0;
 }
 
 header h1 {
@@ -58,7 +58,7 @@ header h1 {
 }
 
 header h1:before {
-  content: "./ ";
+  /*content: "SELECT * FROM  ";*/
   font-size: 24px;
 }
 
@@ -105,11 +105,13 @@ h1, h2, h3, h4, h5, h6 {
 
 #main_content h3 {
   font-size: 18px;
+  padding-top: 20px;
+  padding-bottom: -0.05px;
 }
 
 #main_content h4 {
   font-size: 16px;
-  color: #E6DB74;
+  color: #F92672;
 }
 
 #main_content h5 {
@@ -125,7 +127,7 @@ h1, h2, h3, h4, h5, h6 {
   margin: 0 0 5px 0;
 }
 
-strong{
+#main_content strong{
   color:#F92672;
 }
 
@@ -188,6 +190,27 @@ hr {
   border: 0;
   border-bottom: 1px dashed #b5e853;
   color: #b5e853;
+}
+.positions{
+  font-size: 16px;
+  color: #F92672;
+  text-decoration:none;
+}
+
+
+.projects{
+  font-size: 16px;
+  color: #E6DB74;
+  text-decoration:none;
+}
+
+.hashtags{
+  color:#99a8ba;
+  text-decoration:none;
+}
+
+.hashtags:before{
+  content: "#";
 }
 
 /* Buttons
